nav bar complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Additional CSS Files -->
      <link rel="stylesheet" href="css/genral.css">
-     <link rel="stylesheet" href="css/genral.css">
+     <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/responsive.css">
     <!-- Additional ICON Files -->
     <!-- Font Awesome CDN -->
@@ -27,5 +27,34 @@
   </head>
 
   <body>
+    <!-- MENU -->
+     <section id="hero">
+     <div class="navigation">
+      <div class="container">
+        <div class="nav-bar">
+          <div class="header-logo">
+            <a class="logo-title" href="">
+              Eatery 
+              <span>.</span>
+            Cafe
+            </a>
+          </div>
+          <nav>
+            <ul class="nav-links">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">CHEF</a></li>
+              <li><a href="#">MENU</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </nav>
+          <div class="nav-right">
+            <span class="phone">CALL NOW! 📞 010 020 0340</span>
+            <button class="reserve-btn">Reserve a table</button>
+          </div>
+        </div>
+      </div>
+     </div>
+     </section>
   </body>
 </html>
