hero caption and about section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,36 @@
             <button class="reserve-btn">Reserve a table</button>
           </div>
         </div>
+           <!-- CAPTION -->
+         <div class="caption">
+        <div class="cp-12">
+          <h3>Eatery Cafe & Restaurant</h3>
+          <h1>Our mission is to provide an unforgettable experience</h1>
+          <a class="caption-btn" href="">Meet our chef</a>
+        </div>
+     </div>
       </div>
      </div>
+    
+     </section>
+     <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-50">
+            <div class="about-info">
+              <h4>Read our story</h4>
+              <h2>We've been Making The Delicious Foods Since 1999</h2>
+              <p>Fusce hendrerit malesuada lacinia. Donec semper semper sem vitae malesuada. Proin scelerisque risus et ipsum semper molestie sed in nisi. Ut rhoncus congue lectus, rhoncus venenatis leo malesuada id.</p>
+              <p>Sed elementum vel felis sed scelerisque. In arcu diam, sollicitudin eu nibh ac, posuere tristique magna. You can use this template for your cafe or restaurant website. Please tell your friends about <a class="tamplete" href="">templatemo</a>. Thank you.</p>
+            </div>
+          </div>
+          <div class="col-md-50">
+            <div class="about-img">
+              <img src="images/about-image.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
      </section>
   </body>
 </html>
