--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
      </div>
     
      </section>
+     <!-- TEAM -->
      <section id="about">
       <div class="container">
         <div class="row">
@@ -84,5 +85,202 @@
         </div>
       </div>
      </section>
+     <!-- TEAM -->
+      <section id="team">
+       <div class="container">
+         <div class="coll-sm-12">
+           <h2>Meet our chefs</h2>
+           <h4>They are nice & friendly</h4>
+         </div>
+        <div class="row">
+          <div class="col-md-img">
+            <div class="team-thumb">
+            <img src="images/team-image1.jpg" alt="">
+            <div class="img-hover">
+              <div class="team-item">
+                <h4>Duis vel lacus id magna mattis vehicula</h4>
+                <ul class="social-icon">
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+         <div class="team-info">
+          <h3>New Catherine</h3>
+          <p>Kitchen Officer</p>
+         </div>
+         </div>
+          <div class="col-md-img">
+            <div class="team-thumb">
+            <img src="images/team-image2.jpg" alt="">
+            <div class="img-hover">
+              <div class="team-item">
+                <h4>Cras suscipit neque quis odio feugiat</h4>
+                <ul class="social-icon">
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+         <div class="team-info">
+          <h3>Lindsay Perlen</h3>
+          <p>Owner & Manager</p>
+         </div>
+         </div>
+          <div class="col-md-img">
+            <div class="team-thumb">
+            <img src="images/team-image3.jpg" alt="">
+            <div class="img-hover">
+              <div class="team-item">
+                <h4>Etiam auctor enim tristique faucibus</h4>
+                <ul class="social-icon">
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+         <div class="team-info">
+          <h3>Isabella Grace</h3>
+          <p>Pizza Specialist</p>
+         </div>
+         </div>
+        </div>
+       </div>
+      </section>
+      <!-- MENU -->
+       <section id="menu">
+        <div class="container-full">
+           <div class="coll-sm-12">
+           <h2>Our Menus</h2>
+           <h4>Tea Time & Dining</h4>
+         </div>
+        </div>
+         <div class="row">
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image1.jpg" alt="">
+              <div class="menu-info">
+                <div class="menu-item">
+                  <h3>American Breakfast</h3>
+                  <p>Tomato / Eggs / Sausage</p>
+                </div>
+                <div class="menu-price">
+                  <span>$25</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image2.jpg" alt="">
+               <div class="menu-info">
+                <div class="menu-item">
+                  <h3>Self-made Salad</h3>
+                  <p>Green / Fruits / Healthy</p>
+                </div>
+                <div class="menu-price">
+                  <span>$18</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image3.jpg" alt="">
+               <div class="menu-info">
+                <div class="menu-item">
+                  <h3>Chinese Noodle</h3>
+                  <p>Pepper / Chicken / Vegetables</p>
+                </div>
+                <div class="menu-price">
+                  <span>$34</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image4.jpg" alt="">
+               <div class="menu-info">
+                <div class="menu-item">
+                  <h3>Rice Soup</h3>
+                  <p>Green / Chicken</p>
+                </div>
+                <div class="menu-price">
+                  <span>$28</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image5.jpg" alt="">
+               <div class="menu-info">
+                <div class="menu-item">
+                  <h3>Deli Burger</h3>
+                  <p>Beef / Fried Potatoes</p>
+                </div>
+                <div class="menu-price">
+                  <span>$46</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          <div class="menu-img">
+           <div class="menu-thumb">
+            <a href="">
+              <img class="img-file" src="images/menu-image6.jpg" alt="">
+               <div class="menu-info">
+                <div class="menu-item">
+                  <h3>Big Flat Fried</h3>
+                  <p>Pepper / Crispy</p>
+                </div>
+                <div class="menu-price">
+                  <span>$30</span>
+                </div>
+              </div>
+            </a>
+           </div> 
+          </div>
+          
+         </div>
+       </section>
   </body>
 </html>
