--- a/index.html
+++ b/index.html
@@ -282,5 +282,24 @@
           
          </div>
        </section>
+       <!-- TESTOMONIAL -->
+        <section id="testomonial">
+          <div class="overly"></div>
+            <div class="container">
+                <div class="test-info">
+                  <div class="testomonial-heading">
+                    <h2>Testimonials</h2>
+                  </div>
+                  <div class="testomonial-item">
+                    <p> tristique senectus et netus et malesuada fames ac turpis egestas. Sed vestibulum orci quam.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <div class="testomonial-author">
+                      <h4>Johnny Stephen</h4>
+                      <span>Magna nisi porta ligula</span>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        
   </body>
 </html>
