--- a/index.html
+++ b/index.html
@@ -300,6 +300,40 @@
                 </div>
             </div>
         </section>
-        
+        <!-- CONTACT -->
+        <section id="contact">
+          <div class="container">
+            <div class="row">
+         <div class="contact-left cn-10">
+              <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4263.37160044135!2d90.49541941128865!3d23.649144661189336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b126d6aaaaab%3A0xe82495ad5735e1e8!2sOutdoor%20Stadium!5e0!3m2!1sen!2sbd!4v1767273487408!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+         </div>
+         <div class="contact-right sm-10">
+            <div class="contact-heading">
+              <h2>Contact us</h2>
+            </div> 
+            <form action="" class="form">
+              <div class="contact-input">
+                <input class="form-control" type="text" name="name" placeholder="Full name">
+              </div>
+              <div class="contact-input">
+                <input class="form-control" type="email" placeholder="Email address">
+              </div>
+              <div class="contact-input-100">
+                <input class="form-control" type="text" placeholder="Subject">
+              </div>
+              <div class="contact-input-100">
+                <textarea class="form-control" name="" id="" placeholder="Tell about your Subject" ></textarea>
+              </div>
+              <div class="contact-input-100">
+                <button class="conatct-btn">Send Message</button>
+              </div>
+            </form>
+         </div>
+          </div>
+           
+          </div>
+        </section>
   </body>
 </html>
