--- a/index.html
+++ b/index.html
@@ -335,5 +335,92 @@
            
           </div>
         </section>
+        <!-- FOOTER -->
+    <footer>
+<div class="container">
+  <div class="row">
+    <div class="footer-main-1">
+      <div class="footer-info">
+        <div class="section-title">
+          <h2>Find us</h2>
+        </div>
+        <address>
+          <p>
+            123 nulla a cursus rhoncus,
+            <br>
+             augue sem viverra 10870
+             <br>
+             id ultricies sapien
+          </p>
+        </address>
+      </div>
+    </div>
+    <div class="footer-main-1">
+      <div class="footer-info">
+        <div class="section-title">
+          <h2>Reservation</h2>
+        </div>
+        <address>
+         <p>090-080-0650 | 090-070-0430</p>
+         <p>
+          <a class="footer-link" href="mailto:rmd0191@gmail.com">rmd0191@gmail.com</a>
+         </p>
+         <p>LINE: eatery247 </p>
+        </address>
+      </div>
+    </div>
+    <div class="footer-main-2">
+      <div class="footer-info footer-shop">
+      <div class="section-title">
+          <h2>Open hours</h2>
+        </div>
+        <div class="shop-open">
+          <p>Monday: Closed</p>
+        </div>
+        <div class="shop-open" >
+          <h3>Tuesday to Friday</h3>
+          <p>7:00 AM - 9:00 PM</p>
+        </div>
+        <div class="shop-open">
+          <h3>Saturday - Sunday</h3>
+          <p>11:00 AM - 10:00 PM</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer-main-3">
+      <div class="footer-info">
+    <ul class="footer-social">
+
+     <li>
+      <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+     </li>
+     <li>
+      <a href=""><i class="fa-brands fa-twitter"></i></a>
+     </li>
+     <li>
+      <a href=""><i class="fa-brands fa-instagram"></i></a>
+     </li>
+     <li>
+      <a href=""><i class="fa-brands fa-google"></i></a>
+     </li>
+
+    </ul>
+    <div class="copyright">
+      <p>
+        <br>
+        Copyright © 2018 
+        <br>
+        Your Company Name
+        <br>
+        <br>
+        Design: 
+        <a href="">TemplateMo</a>
+      </p>
+    </div>
+      </div>
+    </div>
+  </div>
+</div>
+    </footer>
   </body>
 </html>
